# ManualMaster-2

./: .replit  README.md  app.py  pyproject.toml  replit.md
backend/: README.md
backend/ManualMaster.Api/: ManualMaster.Api.csproj  Program.cs  appsettings.json
backend/ManualMaster.Api/Controllers/: ManualsController.cs
backend/ManualMaster.Api/Data/: ManualContext.cs  ManualDefaults.cs  ManualSeeder.cs
backend/ManualMaster.Api/Dtos/: ManualCreateRequest.cs  ManualDto.cs  ManualSummaryDto.cs  ManualUpdateRequest.cs
backend/ManualMaster.Api/Extensions/: ManualMappingExtensions.cs
backend/ManualMaster.Api/Models/: Manual.cs
frontend-react/: .gitignore  README.md  index.html  package.json
frontend-react/src/: App.jsx  styles.css
frontend-react/src/api/: client.js
frontend-react/src/components/: ManualDetail.jsx  ManualForm.jsx  ManualList.jsx  SearchFilters.jsx  TagList.jsx
frontend-react/src/hooks/: useManuals.js
frontend-react/src/utils/: download.js
frontend/app/: _layout.js  add.js  auto-find.js  index.js  qr-scan.js
frontend_mvp/manuals-local-storage/: README.md  app.json  package-lock.json  package.json
frontend_mvp/manuals-local-storage/app/: _layout.js  add.js  index.js  qr-scan.js
frontend_mvp/manuals-local-storage/app/utils/: storage.js
react_native_app/: README.md
react_native_app/backend/: app.py  requirements.txt
react_native_app/frontend/: package-lock.json  package.json
