[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "pandas>=2.3.1",
    "pdfplumber>=0.11.7",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "streamlit-webrtc>=0.63.3",
    "streamlit>=1.47.0",
    "trafilatura>=2.0.0",
    "qrcode>=8.2",
    "pillow>=11.3.0",
    "opencv-python>=4.12.0.88",
    "pyzbar>=0.1.9",
]
